Sync ScriptForge pt.po translation
Change-Id: I67075b3ae5e57b8924e12770d835a83513147da3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154536
Tested-by: Jenkins
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>

--- a/wizards/source/scriptforge/po/pt.po
+++ b/wizards/source/scriptforge/po/pt.po
@@ -68,6 +68,7 @@ msgid ""
 "\n"
 "More details : \n"
 "\n"
+""
 msgstr ""
 "A biblioteca ScriptForge encontrou um erro grave. A razão é desconhecida.\n"
 "Talvez seja um bug que pode ser relatado em\n"
@@ -75,6 +76,7 @@ msgstr ""
 "\n"
 "Mais detalhes: \n"
 "\n"
+""
 
 #. SF_Utils._Validate error message
 #. %1: probably ScriptForge
@@ -214,8 +216,8 @@ msgstr ""
 #, kde-format
 msgctxt "VALIDATEFILEURL"
 msgid ""
-"        « %1 » must be a valid file or folder name expressed in the portable "
-"URL notation."
+"        « %1 » must be a valid file or folder name expressed in the "
+"portable URL notation."
 msgstr ""
 "        « %1 » deve ser um nome válido de arquivo ou pasta expresso usando a "
 "notação portável URL."
@@ -233,8 +235,8 @@ msgstr "        « %1 » deve ser um nome válido de arquivo ou pasta."
 #, kde-format
 msgctxt "VALIDATEWILDCARD"
 msgid ""
-"        « %1 » may contain one or more wildcard characters (?, *) in its "
-"last path component only."
+"        « %1 » may contain one or more wildcard characters (?, *) in "
+"its last path component only."
 msgstr ""
 "        « %1 » deve conter um ou mais caracteres coringa (?,*) apenas no "
 "último componente do caminho."
@@ -334,8 +336,8 @@ msgstr ""
 #, kde-format
 msgctxt "DUPLICATEKEY"
 msgid ""
-"The insertion of a new key into a dictionary failed because the key already "
-"exists.\n"
+"The insertion of a new key into a dictionary failed because the key "
+"already exists.\n"
 "Note that the comparison between keys is NOT case-sensitive.\n"
 "\n"
 "« %1 » = %2"
@@ -362,8 +364,8 @@ msgstr ""
 #.
 msgctxt "INVALIDKEY"
 msgid ""
-"The insertion or the update of an entry into a dictionary failed because the "
-"given key contains only spaces."
+"The insertion or the update of an entry into a dictionary failed "
+"because the given key contains only spaces."
 msgstr ""
 "A inserção ou atualização de uma entrada em um dicionário falhou porque a "
 "chave fornecido contém apenas espaços."
@@ -432,8 +434,8 @@ msgstr ""
 #, kde-format
 msgctxt "OVERWRITE"
 msgid ""
-"You tried to create a new file which already exists. Overwriting it has been "
-"rejected.\n"
+"You tried to create a new file which already exists. Overwriting it "
+"has been rejected.\n"
 "\n"
 "« %1 » = %2"
 msgstr ""
@@ -448,8 +450,8 @@ msgstr ""
 #, kde-format
 msgctxt "READONLY"
 msgid ""
-"Copying or moving a file to a destination which has its read-only attribute "
-"set, or deleting such a file or folder is forbidden.\n"
+"Copying or moving a file to a destination which has its read-only "
+"attribute set, or deleting such a file or folder is forbidden.\n"
 "\n"
 "« %1 » = %2"
 msgstr ""
@@ -464,8 +466,8 @@ msgstr ""
 #, kde-format
 msgctxt "NOFILEMATCH"
 msgid ""
-"When « %1 » contains wildcards. at least one file or folder must match the "
-"given filter. Otherwise the operation is rejected.\n"
+"When « %1 » contains wildcards. at least one file or folder must "
+"match the given filter. Otherwise the operation is rejected.\n"
 "\n"
 "« %1 » = %2"
 msgstr ""
@@ -481,8 +483,8 @@ msgstr ""
 #, kde-format
 msgctxt "FOLDERCREATION"
 msgid ""
-"« %1 » contains the name of an existing file or an existing folder. The "
-"operation is rejected.\n"
+"« %1 » contains the name of an existing file or an existing folder. "
+"The operation is rejected.\n"
 "\n"
 "« %1 » = %2"
 msgstr ""
@@ -490,6 +492,23 @@ msgstr ""
 "rejeitada.\n"
 "\n"
 "« %1 » = %2"
+
+#. SF_FileSystem not supported method error message
+#. %1: A method name
+#. %2: An identifier
+#. %3: A file or folder name
+#, kde-format
+msgctxt "FILESYSTEM"
+msgid  ""
+"The method « %2 » is not applicable on a document's internal file "
+"system.\n"
+"\n"
+"« %1 » = '%3'"
+msgstr ""
+"O método « %2 » não é aplicável ao sistema de arquivos interno "
+"do documento.\n"
+"\n"
+"« %1 » = '%3'"
 
 #. SF_Services.CreateScriptService error message
 #. %1: An identifier
@@ -516,8 +535,8 @@ msgctxt "SERVICESNOTLOADED"
 msgid ""
 "The library '%3' and its services could not been loaded.\n"
 "The reason is unknown.\n"
-"However, checking the '%3.SF_Services.RegisterScriptServices()' function and "
-"its return value can be a good starting point.\n"
+"However, checking the '%3.SF_Services.RegisterScriptServices()' "
+"function and its return value can be a good starting point.\n"
 "\n"
 "« %1 » = %2"
 msgstr ""
@@ -533,8 +552,8 @@ msgstr ""
 #, kde-format
 msgctxt "CALCFUNC"
 msgid ""
-"The Calc '%1' function encountered an error. Either the given function does "
-"not exist or its arguments are invalid."
+"The Calc '%1' function encountered an error. Either the given "
+"function does not exist or its arguments are invalid."
 msgstr ""
 "A função Calc '%1' encontrou um erro. Ou a função dada não existe ou seus "
 "argumentos são inválidos."
@@ -548,8 +567,8 @@ msgstr ""
 #, kde-format
 msgctxt "NOSCRIPT"
 msgid ""
-"The requested %1 script could not be located in the given libraries and "
-"modules.\n"
+"The requested %1 script could not be located in the given libraries "
+"and modules.\n"
 "« %2 » = %3\n"
 "« %4 » = %5"
 msgstr ""
@@ -599,8 +618,8 @@ msgstr ""
 #, kde-format
 msgctxt "FILENOTOPEN"
 msgid ""
-"The requested file operation could not be executed because the file was "
-"closed previously.\n"
+"The requested file operation could not be executed because the file "
+"was closed previously.\n"
 "\n"
 "File name = '%1'"
 msgstr ""
@@ -696,8 +715,8 @@ msgid ""
 "The opening of the document failed.\n"
 "Something must be wrong with some arguments.\n"
 "\n"
-"Either the file does not exist, or the password is wrong, or the given "
-"filter is invalid.\n"
+"Either the file does not exist, or the password is wrong, or the "
+"given filter is invalid.\n"
 "\n"
 "%1 = '%2'\n"
 "%3 = '%4'\n"
@@ -724,8 +743,8 @@ msgid ""
 "The opening of the Base document failed.\n"
 "Something must be wrong with some arguments.\n"
 "\n"
-"Either the file does not exist, or the file is not registered under the "
-"given name.\n"
+"Either the file does not exist, or the file is not registered under "
+"the given name.\n"
 "\n"
 "%1 = '%2'\n"
 "%3 = '%4'"
@@ -744,8 +763,8 @@ msgstr ""
 #, kde-format
 msgctxt "DOCUMENTDEAD"
 msgid ""
-"The requested action could not be executed because the document was closed "
-"inadvertently.\n"
+"The requested action could not be executed because the document was "
+"closed inadvertently.\n"
 "\n"
 "The concerned document is '%1'"
 msgstr ""
@@ -762,8 +781,9 @@ msgstr ""
 msgctxt "DOCUMENTSAVE"
 msgid ""
 "The document could not be saved.\n"
-"Either the document has been opened read-only, or the destination file has a "
-"read-only attribute set, or the file where to save to is undefined.\n"
+"Either the document has been opened read-only, or the destination "
+"file has a read-only attribute set, or the file where to save to is "
+"undefined.\n"
 "\n"
 "%1 = '%2'"
 msgstr ""
@@ -784,8 +804,8 @@ msgstr ""
 msgctxt "DOCUMENTSAVEAS"
 msgid ""
 "The document could not be saved.\n"
-"Either the document must not be overwritten, or the destination file has a "
-"read-only attribute set, or the given filter is invalid.\n"
+"Either the document must not be overwritten, or the destination file "
+"has a read-only attribute set, or the given filter is invalid.\n"
 "\n"
 "%1 = '%2'\n"
 "%3 = %4\n"
@@ -805,8 +825,8 @@ msgstr ""
 #, kde-format
 msgctxt "DOCUMENTREADONLY"
 msgid ""
-"You tried to edit a document which is not modifiable. The document has not "
-"been changed.\n"
+"You tried to edit a document which is not modifiable. The document "
+"has not been changed.\n"
 "\n"
 "« %1 » = %2"
 msgstr ""
@@ -999,8 +1019,8 @@ msgstr ""
 #, kde-format
 msgctxt "FORMDEAD"
 msgid ""
-"The requested action could not be executed because the form is not open or "
-"the document was closed inadvertently.\n"
+"The requested action could not be executed because the form is not "
+"open or the document was closed inadvertently.\n"
 "\n"
 "The concerned form is '%1' in document '%2'."
 msgstr ""
@@ -1016,8 +1036,8 @@ msgstr ""
 #, kde-format
 msgctxt "CALCFORMNOTFOUND"
 msgid ""
-"The requested form could not be found in the Calc sheet. The given index is "
-"off-limits.\n"
+"The requested form could not be found in the Calc sheet. The given "
+"index is off-limits.\n"
 "\n"
 "The concerned Calc document is '%3'.\n"
 "\n"
@@ -1038,8 +1058,8 @@ msgstr ""
 #, kde-format
 msgctxt "WRITERFORMNOTFOUND"
 msgid ""
-"The requested form could not be found in the Writer document. The given "
-"index is off-limits.\n"
+"The requested form could not be found in the Writer document. The "
+"given index is off-limits.\n"
 "\n"
 "The concerned Writer document is '%2'.\n"
 "\n"
@@ -1059,8 +1079,8 @@ msgstr ""
 #, kde-format
 msgctxt "BASEFORMNOTFOUND"
 msgid ""
-"The requested form could not be found in the form document '%2'. The given "
-"index is off-limits.\n"
+"The requested form could not be found in the form document '%2'. The "
+"given index is off-limits.\n"
 "\n"
 "The concerned Base document is '%3'.\n"
 "\n"
@@ -1136,8 +1156,8 @@ msgstr ""
 #, kde-format
 msgctxt "DIALOGDEAD"
 msgid ""
-"The requested action could not be executed because the dialog was closed "
-"inadvertently.\n"
+"The requested action could not be executed because the dialog was "
+"closed inadvertently.\n"
 "\n"
 "The concerned dialog is '%1'."
 msgstr ""
@@ -1174,6 +1194,45 @@ msgstr ""
 "O controle '%1' no diálogo '%2' não é uma caixa de edição de textos de "
 "múltiplas linhas.\n"
 "O método desejado não pode ser executado."
+
+#. SF_Dialog Page Manager setting
+#. %1: An identifier
+#. %2: A list of names separated by commas
+#. %3: An identifier
+#. %4: A list of names separated by commas
+#. %5: An identifier
+#. %6: A list of names separated by commas
+#, kde-format
+msgctxt "PAGEMANAGER"
+msgid  ""
+"The Page Manager could not be setup due to inconsistent arguments.\n"
+"\n"
+" %1 : « %2 »\n"
+" %3 : « %4 »\n"
+" %5 : « %6 »"
+msgstr ""
+"O Gerenciador de Páginas não pode ser configurado devido a argumentos inconsistentes\n"
+"\n"
+" %1 : « %2 »\n"
+" %3 : « %4 »\n"
+" %5 : « %6 »"
+
+#. SF_Dialog CreateControl
+#. %1: An identifier
+#. %2: A string
+#. %3: A dialog name
+#, kde-format
+msgctxt "DUPLICATECONTROL"
+msgid  ""
+"A control with the same name exists already in the dialog '%3'.\n"
+"\n"
+"« %1 » = %2\n"
+""
+msgstr ""
+"Um controle com o mesmo nome já existe na caixa de diálogo '%3'.\n"
+"\n"
+"« %1 » = %2\n"
+""
 
 #. SF_Database when running update SQL statement
 #. %1: The concerned method
